# planimetrics_tasks_diagrams_generator

./: .editorconfig  .gitignore  Makefile  README.md  Readme.md  lol.py  pyproject.toml
dataset_generator/: pyproject.toml
dataset_generator/math_tasks_generator/: base.py  generator.py  types.py
dataset_generator/math_tasks_generator/helpers/: __init__.py  run_task.py  tests.py
dataset_generator/math_tasks_generator/math_tasks/: task_90.py  task_94.py  task_95.py  task_96.py  task_97.py  task_98.py  task_99.py
dataset_generator/tests/: test_task_94.py
planimetrics_tasks_generator/: data_loader.py  data_provider.py  figure_kind.py  main.py  main.py.back  pyproject.toml  settings.py  test.py
planimetrics_tasks_generator/datasets/: tasks.tsv  tasks.txt
planimetrics_tasks_generator/math_tasks_generator/: base.py  generator.py
planimetrics_tasks_generator/math_tasks_generator/common/: __init__.py  types.py
planimetrics_tasks_generator/math_tasks_generator/helpers/: run_task.py  tests.py
planimetrics_tasks_generator/math_tasks_generator/math_tasks/: __init__.py  task_144.py  task_145.py  task_146.py  task_401.py  task_402.py  task_406.py  task_717.py  task_730.py  task_732.py  task_90.py  task_94.py  task_95.py  task_96.py  task_97.py  task_98.py  task_99.py
planimetrics_tasks_generator/model/: constants.py  data_preparation.py  evaluation.py  main.py  train.py  visualisation.py
planimetrics_tasks_generator/model/decoders/: __init__.py  attention_decoder.py  decoder.py  encoder.py
planimetrics_tasks_generator/models/: __init__.py  positional_encoding.py  seq2seq_transformer.py  token_embedding.py  utils.py
planimetrics_tasks_generator/tokenizers/: __init__.py  base.py  constants.py  helpers.py
planimetrics_tasks_generator/tokenizers/base/: __init__.py  base.py  base_trainer.py
planimetrics_tasks_generator/tokenizers/bpe/: __init__.py  bpe_tokenizer.py  bpe_trainer.py
planimetrics_tasks_generator/tokenizers/figure/: __init__.py  figure_tokenizer.py  figure_trainer.py
planimetrics_tasks_generator/tokenizers/source_tokenizer/: __init__.py  bpe_trainer.py  source_tokenizer.py
planimetrics_tasks_generator/tokenizers/target_tokenizer/: __init__.py  figure_kind.py  target_tokenizer.py
tokenizers/: pyproject.toml
tokenizers/tests/: test_tokenize.py
tokenizers/tokenizers/: main.py
tokenizers/tokenizers/base/: __init__.py  base.py  base_trainer.py
tokenizers/tokenizers/bpe/: __init__.py  bpe_tokenizer.py  (+1 more)
(+26 files in other folders)
