[tool.poetry]
name = "who-cares"
version = "0.1.0"
description = ""
authors = ["Dominux <kir.gimranov@gmail.com>"]
readme = "README.md"
packages = [{include = "who_cares"}]

[tool.poetry.dependencies]
python = "^3.10"
drawsvg = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
