[tool.poetry]
name = "tokenizers"
version = "0.1.0"
description = ""
authors = ["Dominux <kir.gimranov@gmail.com>"]
readme = "README.md"
packages = [{include = "tokenizers"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
